          from 2.5 (Raúl Marín)
  - #4198, Add ST_ConstrainedDelaunayTriangles SFCGAL function (Darafei
           Praliaskouski)
  - #4414, Include version number in address_standardizer lib (Raúl Marín)
  - #4352, Use CREATE OR REPLACE AGGREGATE for PG12+ (Raúl Marín)
  - #4334, Fix upgrade issues related to renamed parameters (Raúl Marín)

PostGIS 3.0.0alpha1
2019/05/26
For full changes and enhancements, refer to PostGIS 3.0.0 section.
This version requires PostgreSQL 9.5+-12 and GEOS >= 3.6+
Additional features enabled if you are running Proj6+ and PostgreSQL 12
* Major highlights *
  - #4341, Using "support function" API in PgSQL 12+ to replace SQL inlining
           as the mechanism for providing index support under ST_Intersects, et al
           (Paul Ramsey)
  - #3888, Raster support now packaged as a separate extension - postgis_raster
           (Sandro Santilli)
  - #3807, Extension library files no longer include the minor version.
           Use New configure switch --with-library-minor-version
           if you need the old behavior (Regina Obe)
  - #4322, Support for Proj 6+ API, bringing more accurate datum transforms
           and support for WKT projections
  - #4260, liblwgeom headers are not installed anymore.
           If your project depends on them available, please use
           librttopo instead. (Darafei Praliaskouski)
  - #4311, Introduce `--with-wagyu` as an option for MVT polygons (Raúl Marín)
  - #4258, #4278 Enhance postgis functions ST_Area, ST_Distance, ST_Intersection,
           ST_Difference, ST_Union, ST_Intersects, ST_3DIntersects, ST_3DDistance
           to handle types (Solid PolyhedralSurface, TINS) that were only available in SFCGAL.
           Remove postgis.backend switch.
          (Darafei Praliaskouski)
  - #4230, SP-GiST and GiST support for ND box operators overlaps, contains,
           within, equals (Esteban Zimányi and Arthur Lesuisse from Université