@@ -20,6 +20,7 @@ Additional features enabled if you are running Proj6+ and PostgreSQL 12
   - #4414, Include version number in address_standardizer lib (Raúl Marín)
   - #4352, Use CREATE OR REPLACE AGGREGATE for PG12+ (Raúl Marín)
   - #4334, Fix upgrade issues related to renamed parameters (Raúl Marín)
+  - #4388, AddRasterConstraints: Ignore NULLs when generating constraints (Raúl Marín)
 
 PostGIS 3.0.0alpha1
 2019/05/26
@@ -164,6 +165,7 @@ PostGIS 3.0.0
   - #4383, Fix undefined behaviour in implicit conversions (Raúl Marín)
   - #4352, Use CREATE OR REPLACE AGGREGATE for PG12+ (Raúl Marín)
   - #4334, Fix upgrade issues related to renamed function parameters (Raúl Marín)
+  - #4388, AddRasterConstraints: Ignore NULLs when generating constraints (Raúl Marín)
 
 
 PostGIS 2.5.0
